--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-/vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
+# Avoid accidental upload of the Sketch and Figma design files
+#####################################################
+## Please do not remove lines 5 and 6 - thanks! 🙂 ##
+#####################################################
+*.sketch
+*.fig
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
+# Avoid accidental XD upload if you convert the design file
+###############################################
+## Please do not remove line 12 - thanks! 🙂 ##
+###############################################
+*.xd
 
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
+# Avoid your project being littered with annoying .DS_Store files!
+.DS_Store
+.prettierignore
